--- a/página-personal (empresarial)/index.html
+++ b/página-personal (empresarial)/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Airbnb</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="icon" href="https://imgs.search.brave.com/QuSJMlgfUwkNZc9di8dvCW0RfEvsSJbJaRDyK6qZ8vc/rs:fit:860:0:0:0/g:ce/aHR0cHM6Ly9wbHVz/cG5nLmNvbS9pbWct/cG5nL2FpcmJuYi1s/b2dvLXBuZy1wbmct/aWNvLTUxMi5wbmc" type="image/png">
+
 </head>
 <body>
     <!--Encabezado-->
@@ -29,20 +31,20 @@
             <article>
                 <h3>Proyecto2</h3>
                 <p>Nuestro segundo proyecto es poder tener confianza entre los huespedes y los dueños mediante mensajes y llamadas faciles de accesar.</p>
-                <a href="https://ejemplo.com/proyecto2" target="_blank">Ver más</a>
+                <a href="https://www.airbnb.mx/" target="_blank">Ver más</a>
             </article>
 
             <article>
                 <h3>Proyecto3</h3>
                 <p>Nuestro tercer proyecto tiene como objetivo crear oporunidades para los propietarios para poder ganar dinero de sus propiedades</p>
-                <a href="https://ejemplo.com/proyecto3" taret="_blank">Ver más</a>
+                <img src="https://img-cdn.pixlr.com/image-generator/history/6786bcd74bc5d7a88d8caa1e/472ccc43-5535-4606-a190-b7301f4dcd07/preview.webp" alt="Imagen de un hombre en su casa para rentarla con airbnb" width="300" height="auto">
             </article>
         </section>
 
         <!-- Seccion de contacto-->
         <section id="contacto">
             <h2>Contacto</h2>
-            <form action="#" method="post">
+            <form action="guardar_contacto.php" method="POST">
                 <label for="nombre">Nombre:</label>
                 <input type="text" id="nombre" name="nombre" required>
 
@@ -57,7 +59,7 @@
         </section>
     </main>
 
-    <!--Pie de la pagina-->
+    <!--footer de la pagina-->
     <footer>
         <p>&copy; 2025 Airbnb. Todos los derechos reservados.</p>
         <p>
